# WordingPlusPlus

./: BUG_REPORT.md  CMakeLists.txt  LuaPlugin.cpp  LuaPlugin.h  MODERNIZATION_REPORT.md  MainFrm.h  PluginManager.cpp  PluginManager.h  README.md  REFACTORING_PLAN.md  WordPad.sln  WordPad.vcxproj  WordPad.vcxproj.filters  datedial.cpp  ddxm.cpp  formatba.cpp  formatta.cpp  mainfrm.cpp  plugin_interface.h  plugins_api.md  resource.h  test.cpp  wordpad.cpp  wordpad.h  wordpad.rc  wordpvw.cpp
.github/workflows/: build.yml  codeql.yml
PluginAPI/: IPlugin.h
PluginAPI/sol2/: sol.hpp
Plugins/SimplePlugin/: SimplePlugin.cpp  SimplePlugin.vcxproj
SortLines/: SortLines.cpp
WordCount/: WordCount.cpp
Wordle/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  CMakeLists.txt  DateTimeDialog.cpp  DateTimeDialog.h  Document.cpp  Document.h  DocumentModel.cpp  DocumentModel.h  FileNewDialog.cpp  FileNewDialog.h  MainFrm.h  MainWindow.cpp  MainWindow.h  PluginManager.cpp  PluginManager.h  Resource.h  Settings.cpp  Settings.h  TaskPane.cpp  View.cpp  View.h  main.cpp  mainfrm.cpp  targetver.h  wordpad.cpp  wordpad.h  wordpad.rc  wordpdoc.cpp  wordpdoc.h  wordpvw.cpp  wordpvw.h
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md
docs/docs/core-classes/cwordpadapp/: cwordpadapp.md
docs/docs/how-to/: adding-a-new-feature.md
plugins/: LuaPluginExample.lua
plugins/CppPlugin/: CppPlugin.cpp  CppPlugin.def  CppPlugin.h  CppPlugin.vcxproj
plugins/ExamplePlugin/: ExamplePlugin.cpp  ExamplePlugin.vcxproj  framework.h
(+3 files in other folders)
